feat: 공공데이터 연결 성공
console.log를 통해 받아온 데이터를 확인합니다.

Refs #9

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
         font-style: normal;
       }
     </style>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d22256e3cecabc4415facf9d00625bd7"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API%"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API%&libraries=services,clusterer,drawing"></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
